# datadiff

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  myresults  source.csv  target.csv
.github/agents/: datadiff-dev.agent.md
.github/workflows/: release.yml
examples/: README.md  batch-manifest.json  customers_v1.csv  customers_v2.csv  schema-policy.json
packaging/aur/: .SRCINFO  PKGBUILD  datadiff.desktop
src/: data.rs  lib.rs  main.rs  schema.rs
src/connectors/: csv.rs  mod.rs  mysql.rs  postgres.rs  profiles.rs  sqlite.rs  sqlserver.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/ui/: index.html
