[package]
name = "datadiff"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "datadiff"
path = "src/main.rs"

[lib]
name = "datadiff"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
polars = { version = "0.39", features = ["lazy", "csv", "parquet", "streaming"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
colored = "2"
anyhow = "1"
prettytable = "0.10.0"
chrono = "0.4"