[package]
name = "datadiff"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "datadiff"
path = "src/main.rs"

[lib]
name = "datadiff"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
polars = { version = "0.39", features = ["lazy", "csv", "parquet", "streaming"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
colored = "2"
anyhow = "1"
prettytable = "0.10.0"
chrono = "0.4"
tiberius = { version = "0.12", features = ["tds73"] }
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
keyring = "3"
dirs = "5"