[package]
name = "datadiff-gui"
version = "0.2.0"
edition = "2021"

[lib]
name = "datadiff_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
datadiff = { path = "../.." }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
