[package]
name = "datadiff-gui"
version = "0.2.0"
edition = "2021"
description = "Tauri desktop UI for DataDiff"
license = "GPL-3.0-only"
repository = "https://github.com/vixinxiviir/datadiff"
homepage = "https://github.com/vixinxiviir/datadiff"

[lib]
name = "datadiff_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
datadiff = { path = "../.." }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
keyring = "3"
